/*
 * This file was generated by the Gradle 'init' task.
 * This generated file contains a sample Java application project to get you started. For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.1.0/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
	// eclipse is used for nvim's jdtls to find the classpath
	id 'java'
    // id 'application'
	id 'antlr'
    //id 'com.diffplug.spotless' version '8.0.0'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
	flatDir {
		dirs 'libs'
	}
}

configurations {
    googleJavaFormat
}

dependencies {
    // JUnit 5
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'

    // This dependency is used by the application.
    implementation libs.guava

	// Alloy Jar
	implementation fileTree(dir: 'libs', include: ['*.jar'])//name: 'org.alloytools.alloy.dist'

	// Picocli
	implementation 'info.picocli:picocli:4.7.5'

	// Antlr
	antlr "org.antlr:antlr4:4.13.2"

	// jpplib (oppen style pretty printing)
	implementation 'com.io7m.jpplib:com.io7m.jpplib.core:1.0.0'

    googleJavaFormat "com.google.googlejavaformat:google-java-format:1.30.0"
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}



def tools = [
    dpalloy: [
        mainClass: "ca.uwaterloo.watform.dpalloycli.DpAlloyCli",
        excludes: [
            'ca/uwaterloo/watform/alloytotla/**',
            'ca/uwaterloo/watform/cli/**',
            'ca/uwaterloo/watform/dashast/**',
            'ca/uwaterloo/watform/dashmodel/**',
            'ca/uwaterloo/watform/dashexprvisitor/**',
            'ca/uwaterloo/watform/dashtoalloy/**',
            'ca/uwaterloo/watform/dashtotla/**',
            'ca/uwaterloo/watform/predabstraction/**',
            'ca/uwaterloo/watform/tlaast/**',
            'ca/uwaterloo/watform/tlamodel/**',
            'ca/uwaterloo/watform/alloytotla-legacy/**'
        ]
    ],
    dashtoalloy: [
       mainClass: "ca.uwaterloo.watform.dashtoalloy.Main",
       excludes: [
            'ca/uwaterloo/watform/alloytotla/**',
            'ca/uwaterloo/watform/alloytotla-legacy/**',
            'ca/uwaterloo/watform/cli/**',
            'ca/uwaterloo/watform/dashtotla/**',
            'ca/uwaterloo/watform/dpalloy/**',
            'ca/uwaterloo/watform/predabstraction/**',
            'ca/uwaterloo/watform/tlaast/**',
            'ca/uwaterloo/watform/tlamodel/**',
            'ca/uwaterloo/watform/alloytotla-legacy/**'
        ]
    ],
    alloytotla: [
       mainClass: "ca.uwaterloo.watform.alloytotla.DashToAlloyCli",
       excludes: [
            'ca/uwaterloo/watform/alloytotla-legacy/**',
            'ca/uwaterloo/watform/cli/**',
            'ca/uwaterloo/watform/dashtotla/**',
            'ca/uwaterloo/watform/dpalloy/**',
            'ca/uwaterloo/watform/predabstraction/**',
            'ca/uwaterloo/watform/dashtoalloy/**',
        ]
    ],
    releaseJar: [
       mainClass: "ca.uwaterloo.watform.cli.Main",
       excludes: []
    ]
]


sourceSets {
    tools.each { name, tool ->
        "$name" {
            java {
                srcDirs = [
                    "src/main/java",
                    "$buildDir/generated-src/antlr/main"
                ]
                exclude tool.excludes
            }
        }
    }
}

tools.each { name, tool ->
    configurations["${name}Implementation"].extendsFrom(configurations.implementation)
}

// different tools to build
tools.each { name, tool ->

    def toolSources = sourceSets[name].java.files*.absolutePath

    // replaces spotlessApply and is always done just before build
    def formatTask = tasks.register("format${name.capitalize()}", JavaExec) {
        dependsOn tasks.named("generateGrammarSource")
        classpath = configurations.googleJavaFormat
        mainClass = "com.google.googlejavaformat.java.Main"
        jvmArgs(
            "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
        )

        args = ["--replace"] + toolSources
    }

    tasks.register(name, Jar) {

        dependsOn(formatTask)
        dependsOn("compile${name.capitalize()}Java")

        archiveBaseName = name

        manifest {
            attributes(
                "Main-Class": tool.mainClass
            )
        }

        from(sourceSets[name].output)

        from {
            configurations["${name}RuntimeClasspath"]
                .collect { zipTree(it) }
        }

        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
        zip64 = true
    }
}


tasks.named('generateGrammarSource') {
    outputDirectory = file("$buildDir/generated-src/antlr/main/antlr/generated")
    arguments += ["-visitor", "-no-listener"]
}

tasks.withType(JavaCompile).configureEach {
    dependsOn tasks.named('generateGrammarSource')
}



tasks.named("processTestResources") {
    dependsOn tasks.named('generateGrammarSource')
}

tasks.named('test') {
    dependsOn tasks.named('generateGrammarSource')
    
    useJUnitPlatform()
    
    testLogging {
        showStandardStreams = true
    }

    if (project.hasProperty('stopOnFirstFail')) {
        systemProperty 'stopOnFirstFail', project.property('stopOnFirstFail').toString()
    }
}


// so build doesn't depend on test
tasks.named("check") {
    dependsOn.removeIf { it.name == "test" }
}

